--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000
-URL = "mongodb+srv://nagrajdeepika1212:bqe7aSYl3DOJhaGk@cluster0.l68fsj5.mongodb.net/AuthApp"
+URL = ""
 JWT_SECRET = deepika
